<resources>
    <string name="app_name">Cultour</string>
    <string name="invalid_email">Invalid email</string>
    <string name="hint_email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="minimal_password">Password min 8 characters</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="haveacc">Doesn\'t have an account yet?</string>
    <string name="background_photo">Background Photo</string>
    <string name="username">Username</string>
    <string name="alreadyhaveacc">Already have an account?</string>
    <string name="hintrepeat">Repeat Password</string>
    <string name="search_hint">Search</string>
    <string name="featured">Featured</string>
    <string name="dummy_placename">Surabaya North Quay</string>
    <string name="dummy_address">Jl. Perak Bar. North Perak, Surabaya 60165 Indonesia</string>
    <string name="log_out">Log Out</string>
    <string name="dummy_rating">4.5</string>
    <string name="dummy_category">Historical Building</string>
    <string name="make_your_plan">Make Your Plan</string>
    <string name="desc">Cultour will help create your itinenary according to your preferences and make your trip amazing.</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simply">Simply pick one of the categories below</string>
    <string name="how">How would you prefer to enjoy your time?</string>
    <string name="make_a_plan">Make a plan</string>
    <string name="dummy_username">dummy username</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>