<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recommendation_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/placename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dummy_placename"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:fontFamily="@font/montserrat_semibold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/placename"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_rating"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/icon_star" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_category"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginStart="7dp"
                android:maxLines="1"
                android:ellipsize="end"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>