<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">
    <ImageView
        android:id="@+id/iv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/image1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background_photo"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        app:boxStrokeColor="@color/blue"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        app:startIconDrawable="@drawable/profile_icon"
        app:startIconTint="@color/blue"
        android:textColorHint="@color/blue"
        android:alpha="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textSize="14sp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        app:boxStrokeColor="@color/blue"
        android:layout_marginTop="15dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/blue"
        android:textColorHint="@color/blue"
        android:alpha="0.5">

        <com.capstone.cultour.ui.custom.MyEmail
            android:id="@+id/myemail"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
        app:startIconDrawable="@drawable/pw_icon"
        android:textColorHint="@color/blue"
        app:startIconTint="@color/blue"
        app:endIconTint="@color/blue"
        android:alpha="0.5"
        >

        <com.capstone.cultour.ui.custom.MyPassword
            android:id="@+id/mypassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatpasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
        app:startIconDrawable="@drawable/pw_icon"
        android:textColorHint="@color/blue"
        app:startIconTint="@color/blue"
        app:endIconTint="@color/blue"
        android:alpha="0.5"
        >

        <com.capstone.cultour.ui.custom.MyPassword
            android:id="@+id/repeatingPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/hintrepeat"
            android:inputType="textPassword"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/register"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatpasswordLayout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="@id/btn_register"
        app:layout_constraintTop_toBottomOf="@id/btn_register">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyhaveacc" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/blue" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>