<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/image1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="32sp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/iv_login"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/email_icon"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent">

        <com.capstone.cultour.ui.custom.MyEmail
            android:id="@+id/edt_email"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/passwordTextInputLayout"
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    app:endIconMode="password_toggle"
    app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:boxStrokeWidth="2dp"
    app:startIconDrawable="@drawable/pw_icon"
    app:boxStrokeColor="@android:color/transparent"
    app:boxBackgroundColor="@android:color/transparent"
    >
    <com.capstone.cultour.ui.custom.MyPassword
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textSize="14sp"
        android:inputType="textPassword"/>
</com.google.android.material.textfield.TextInputLayout>

<Button
    android:layout_width="300dp"
    android:layout_height="64dp"
    app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/login"
    android:textStyle="bold"
    android:fontFamily="@font/montserrat_semibold"
    android:textSize="12sp"
    android:layout_marginTop="20dp"
    android:backgroundTint="@color/blue"/>






</androidx.constraintlayout.widget.ConstraintLayout>